--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
+body{background: black;}
 h1{font-size: 42px; color: red;}
+p{font-size: 12px; color: rgb(255, 153, 0);}
+ul{font-size: 26px; color: rgb(0, 179, 255);}
+li{font-size: 14px; color: greenyellow;}
