--- a/style.css
+++ b/style.css
@@ -1,5 +1,443 @@
-body{background: black;}
-h1{font-size: 42px; color: red;}
-p{font-size: 12px; color: rgb(255, 153, 0);}
-ul{font-size: 26px; color: rgb(0, 179, 255);}
-li{font-size: 14px; color: greenyellow;}
+/* Start general config. */
+
+*{font-family:"lato"; margin: 0px; padding: 0px;text-decoration: none;list-style-type: none;}
+
+:root{
+    --darkBackground: #7a23d4;
+    --hellkBackground: #fd066d;
+    --darkGray: #3d3939;
+    --hellGray: #c9c2c2;
+    --black: #000000;
+    --white:#ffffff;
+    --radius:7VH;
+    --title:7VH;
+    --subTitle:5VH;
+}
+
+/* END general config. */
+
+/* Start  Header & Nav*/
+
+  header{
+    background-color: var(--black);
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+
+/* Start  Nav desktop*/
+  .NavBoxDesktop{}
+
+  .NavDesktop{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 70VW;
+  }
+/* End  Nav desktop*/
+
+  #dropdown {display: none;}
+
+
+
+/* Dropdown Button */
+  .dropbtn {
+      background-color: var(--black);
+      color: var(--hellGray);
+      height: 100%;
+      width: 10VW;
+      padding: 16px;
+      font-size: 32px;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: var(--hellGray);
+    color: var(--darkGray);
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    display: inline-block;
+    width: 20VW;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0px;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0px;
+    top: 10VH;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+
+  /* start LOGO SETTINGS (responsive) */
+    .headerBox{
+      height:100%; 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    #Logo{height: 60%; width: auto;}
+  /* End LOGO SETTINGS (responsive) */
+
+
+  /* End  Header & Nav*/
+
+/* start SECTION only Web */
+
+#DesktopSection{width: 100VW;height: 40%;}
+
+.Div_Box_Father{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100VW;
+
+}
+
+.Div_Box_Son{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100VW;
+}
+
+.Div_Box{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 25VH;
+	width: 30VW;
+	margin: 1%;
+	border-radius: var(--radius);
+	background-image: linear-gradient(120deg, var(--hellkBackground), var(--darkBackground));
+	padding: 4px;
+}
+
+/*Color de los textos en el primer box*/
+.Div_Box__text{
+	color: var(--white);
+	display: flex;
+}
+
+.Div_Box_divtext__conteiner{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 45%;
+}
+
+.Div_Box_divtext{
+	display: flex;
+	align-items: center;
+	justify-content: left;
+	width: auto;
+	color: var(--white);
+}
+
+.Div_Box_divtext p {font-size: 1em; margin: 10%;}
+.Div_Box_divtext h2 { font-size: 2em;}
+
+
+
+
+#divBox2{
+	background-image: url("6-img/1d.jpg");
+	background-size: cover;
+}
+
+#divBox3{
+	width: 80%;
+	height: auto;
+}
+
+#divBox4{
+	height: 25VH;
+	width: 30VW;
+	border-radius: 0px var(--radius) var(--radius) 0px;
+	border: 4px solid var(--darkBackground);
+	border-left: none;
+
+}
+
+#divBox4IMG{
+	background-image: url("6-img/mb4.png");
+	background-size: cover;
+	height: 90%;
+	width: 90%;
+	background-position: right;
+}
+
+#divBox5{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: none;
+	border: 4px solid var(--darkBackground);
+}
+
+#divBox5h2I{
+	font-size: var(--title);
+	margin: 0px 10% 0px 0px;
+}
+
+#divBox5h2D{
+	font-size: var(--title);
+	margin: 0px 0px 0px 10%;
+}
+
+
+#ImgBox6{
+	filter: invert(100%); 
+  min-height: 70%;
+  max-width: 20%;
+}
+
+#divBox6 Button{
+	font-size: 6VH;
+	font-weight: 600;
+}
+
+#divBox7{
+	background-image: url("6-img/smiley-woman\ \(2\).jpg");
+	background-size: cover;
+	border-radius: var(--radius) 0px 0px var(--radius);
+	width: 15VW;
+  background-position: 60% 50%;
+}
+
+
+.Div_Box__Hollow{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background: white;
+	border-radius: var(--radius);
+	width: 100%;
+	height: 100%;
+}
+
+
+button{
+	font-size: var(--subTitle);
+	color: #e1dfe2;
+	font-weight: 900;
+	background: none;
+	border: none;
+	margin: none;
+	padding: none;
+}
+
+#divBox6:hover{
+	opacity: 0.9;
+}
+
+/* End SECTION only Web */
+
+
+main{ 
+    width: 100vw;
+    height: 200VH; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;}
+
+.mainTitleBox{
+    height: 30Vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.pBox{height: 40%;width: 60VW;margin: 1%;}
+
+
+/* Start Slider Section (ResponsiveSection) */
+#ResponsiveSection{
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: 100VW;
+  background-color: var(--white);
+}
+
+.slider {
+  width: 95%;
+  height: 80%;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.slides {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.dots {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
+  background-color: black;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #fff;
+}
+/* End Slider Section (ResponsiveSection) */
+
+
+
+/* Start BUTTON STYLE */
+article{
+  width: 100VW; 
+  height: 10%;
+  display: flex;
+  align-items: top;
+  justify-content: center;
+}
+
+.buttonBox{
+    height: 80%;
+    width: 80%;
+    border-radius: 20px;
+    background-image: linear-gradient(to right, var(--hellkBackground) , var(--darkBackground));
+    border: 2px solid var(--darkGray);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a{
+    text-decoration: none; 
+    color:var(--hellGray);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttonBox:hover{opacity: 0.9;;border: 2px solid var(--darkGray);}
+a:hover{color: var(--darkGray);}
+/* End BUTTON STYLE */
+
+/* Start Footer */
+footer{
+    background-color: var(--black);
+    padding: 2vh 5vw 2vh 5vw;
+    width: 90vw;
+    height: 26vh;
+    
+  }
+
+  #footerGrid{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: 50% 10% 40%;
+    column-gap: 5%;
+    row-gap: 2%;
+    grid-template-areas:    "a0 a1 a2"
+                            "b0 b1 b2"
+                            "c0 c1 c2";
+    align-items: center;
+    justify-content: center;
+  }
+
+  img{width: 80%;grid-area: a1;max-width: 500px;}
+
+  p{grid-area: b1;color: var(--white);}
+
+  .Div1{grid-area: c0;}
+  .Div2{grid-area: c1;}
+  .Div3{grid-area: c2;}
+
+.FaIcons {font-size: 32px; padding: 0px 5% 0px 5%;}
+/* End Footer */
+
+@media only screen and (max-width: 630px){
+  .contactInfo{
+    display: none;
+  }
+  #DesktopSection{
+    display: none;
+  }
+
+  main{height: 80vh;}
+
+  #ResponsiveSection{
+    height: 50%;
+  }
+
+  .NavBoxDesktop{display: none;}
+  #dropdown{display: block;}
+}
